feat: use recurring weekly work slots
